Bugfix for orbit-slider loading before images are loaded, and height squished

--- a/source/stylesheets/_settings.scss
+++ b/source/stylesheets/_settings.scss
@@ -700,7 +700,7 @@ $clearing-bg: rgba(51, 51, 51, 0.6);//#333;
 // $orbit-caption-font-size: rem-calc(14);
 // $orbit-caption-position: "bottom"; // Supported values: "bottom", "under"
 // $orbit-caption-padding: rem-calc(10 14);
-// $orbit-caption-height: auto;
+$orbit-caption-height: 411px;
 
 // We use these to control the left/right nav styles
 // $orbit-nav-bg: none;
